--- a/Labs/Lab_2/Lab_2.1_No_Parametrico.ipynb
+++ b/Labs/Lab_2/Lab_2.1_No_Parametrico.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -62,6 +62,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy.matlib as matlib\n",
+    "\n",
+    "from numpy import random\n",
+    "import math\n",
     "\n",
     "#Algunas advertencias que queremos evitar\n",
     "import warnings\n",
@@ -105,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -203,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -265,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -299,60 +302,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "FXdPAMsgmk4F"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Error durante la prueba k=2 0.3630095013508765+-0.006140024361192514\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from numpy import random\n",
-    "import math\n",
-    "from scipy import stats\n",
+    "def executeKNN(k):\n",
+    "    N = np.size(X,0)\n",
     "\n",
-    "N = np.size(X,0)\n",
+    "    #Entrenamiento y validación del modelo\n",
+    "    random.seed(1)\n",
+    "    Error = np.zeros(2)\n",
     "\n",
-    "#Entrenamiento y validación del modelo\n",
-    "random.seed(1)\n",
-    "Error = np.zeros(2)\n",
+    "    for j in range(2):\n",
     "\n",
-    "for j in range(2):\n",
-    "    \n",
-    "    ind=np.random.permutation(N)\n",
-    "    Xtrain = X[ind[0:int(math.ceil(0.7*N))],:]\n",
-    "    Xtest = X[ind[int(math.ceil(0.7*N)):N],:]\n",
-    "    Ytrain = Y[ind[0:int(math.ceil(0.7*N))]]\n",
-    "    Ytest = Y[ind[int(math.ceil(0.7*N)):N]]\n",
+    "        ind=np.random.permutation(N)\n",
+    "        Xtrain = X[ind[0:int(math.ceil(0.7*N))],:]\n",
+    "        Xtest = X[ind[int(math.ceil(0.7*N)):N],:]\n",
+    "        Ytrain = Y[ind[0:int(math.ceil(0.7*N))]]\n",
+    "        Ytest = Y[ind[int(math.ceil(0.7*N)):N]]\n",
     "\n",
-    "    #Normalizamos los datos\n",
-    "    media = np.mean(Xtrain)\n",
-    "    desvia = np.std(Xtrain)\n",
-    "    Xtrain = sc.stats.stats.zscore(Xtrain)\n",
-    "    Xtest = (Xtest - np.matlib.repmat(media, Xtest.shape[0], 1))/np.matlib.repmat(desvia, Xtest.shape[0], 1)\n",
+    "        #Normalizamos los datos\n",
+    "        media = np.mean(Xtrain)\n",
+    "        desvia = np.std(Xtrain)\n",
+    "        Xtrain = sc.stats.stats.zscore(Xtrain)\n",
+    "        Xtest = (Xtest - np.matlib.repmat(media, Xtest.shape[0], 1))/np.matlib.repmat(desvia, Xtest.shape[0], 1)\n",
     "\n",
-    "    #Complete con el llamado apropiado de la función que Uds diseñaron \n",
-    "    #(X_train, Y_train, X_val, k, tipo)\n",
-    "    tipo = 0\n",
-    "    k = 2\n",
-    "    Yest = KNN(Xtrain, Ytrain, Xtest, k, tipo)\n",
-    "    \n",
-    "    #Evaluamos las predicciones del modelo con los datos de test\n",
-    "    Error[j] = MAPE(Yest,Ytest)\n",
+    "        #Complete con el llamado apropiado de la función que Uds diseñaron \n",
+    "        #(X_train, Y_train, X_val, k, tipo)\n",
+    "        tipo = 0\n",
+    "        #k = 2\n",
+    "        Yest = KNN(Xtrain, Ytrain, Xtest, k, tipo)\n",
     "\n",
-    "mape = np.mean(Error)\n",
-    "std = np.std(Error)\n",
+    "        #Evaluamos las predicciones del modelo con los datos de test\n",
+    "        Error[j] = MAPE(Yest,Ytest)\n",
     "\n",
-    "print('\\nError durante la prueba k=2 ' +  str(mape) + '+-' + str(std))"
+    "    mape = np.mean(Error)\n",
+    "    std = np.std(Error)\n",
+    "\n",
+    "    print('\\nError durante la prueba k=' + str(k) + ' ' +  str(mape) + '+-' + str(std))\n",
+    "\n",
+    "    return(mape, std)"
    ]
   },
   {
@@ -375,7 +368,7 @@
     "id": "amtSr06wmk4V"
    },
    "source": [
-    "En este caso se está utilizan el método de validación MAPE (Mean Absolute Percentage Error). Con esta medida de error obtenemos en que porcentaje se desvió la salida obtenida de la espera, respecto de las variables en cuestión."
+    "En este caso se está utilizan el método de validación MAPE (Mean Absolute Percentage Error). Con esta medida de error obtenemos en que porcentaje se desvió la salida obtenida de la esperada, respecto de las variables en cuestión."
    ]
   },
   {
@@ -451,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "referenced_widgets": [
@@ -462,24 +455,7 @@
     "id": "WnO6Ulzfmk5F",
     "outputId": "1dada410-1cda-4e61-e2ad-cca06133d537"
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8336bcf3d05042f19bc7db2f0bf20277",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "QgridWidget(grid_options={'fullWidthRows': True, 'syncColumnCellResize': True, 'forceFitColumns': True, 'defau…"
-      ]
-     },
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -491,8 +467,15 @@
     "df_types[\"Error_Prueba\"] = \"\"\n",
     "df_types[\"Desviación estándar del error\"] = \"\"\n",
     "df_types.set_index(['Numero de vecinos'], inplace=True)\n",
-    "df_types[\"Error_Prueba\"][1] = \"0.3630\"\n",
-    "df_types[\"Desviación estándar del error\"][1] = \"0.0061\"\n",
+    "#df_types[\"Error_Prueba\"][1] = \"0.3630\"\n",
+    "#df_types[\"Desviación estándar del error\"][1] = \"0.0061\"\n",
+    "\n",
+    "valoresK = np.array([1,2,3,4,5,6,7,100])\n",
+    "for i in range(np.size(valoresK)):\n",
+    "    error, std = executeKNN(valoresK[i])\n",
+    "    df_types[\"Error_Prueba\"][i] = error\n",
+    "    df_types[\"Desviación estándar del error\"][i] = std\n",
+    "\n",
     "#df_types.sort_index(inplace=True)\n",
     "qgrid_widget = qgrid.show_grid(df_types, show_toolbar=False)\n",
     "qgrid_widget"
@@ -649,10 +632,16 @@
     "def Nadaraya_Watson(X_train, Y_train, X_val, ancho_h):\n",
     "    \n",
     "    h = ancho_h    #Parámetro h que equivale al ancho de la ventana o kernel\n",
-    "    Nv = len(X_val)\n",
-    "    Y_val = np.zeros(Nv)\n",
-    "     \n",
-    "        \n",
+    "    Nval = len(X_val)\n",
+    "    Ntrain = len(X_train)\n",
+    "    \n",
+    "    Y_val = np.zeros(Nval)\n",
+    "    \n",
+    "    for i in range(Nval):\n",
+    "        muestra = X_val[i,:]\n",
+    "        for j in range(Ntrain):\n",
+    "            distancia = distance.euclidean(muestra, X_train[j])\n",
+    "            peso = kernel_gaussiano(distancia/h)\n",
     "        \n",
     "    #Debe retornar un vector que contenga las predicciones para cada una de las muestras en X_val, en el mismo orden.      \n",
     "    return Y_val\n"
