Tabla resultados - Parzen

--- a/Labs/Lab_2/Lab_2.1_No_Parametrico.ipynb
+++ b/Labs/Lab_2/Lab_2.1_No_Parametrico.ipynb
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -725,34 +725,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Error durante la prueba 0.30111035388439256+-0.0031344056092405814\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(0.30111035388439256, 0.0031344056092405814)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "executePARZEN_NW()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -776,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 52,
    "metadata": {
     "colab": {
      "referenced_widgets": [
@@ -789,9 +761,29 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Error durante la prueba 0.38130057348448304+-0.015731139983383324\n",
+      "\n",
+      "Error durante la prueba 0.30111035388439256+-0.0031344056092405814\n",
+      "\n",
+      "Error durante la prueba 0.3052229403956968+-0.0031592182248232903\n",
+      "\n",
+      "Error durante la prueba 0.305480581722527+-0.003943068384557297\n",
+      "\n",
+      "Error durante la prueba 0.299316519656669+-0.004245154346174562\n",
+      "\n",
+      "Error durante la prueba 0.2644374071451173+-0.0033811170453101613\n",
+      "\n",
+      "Error durante la prueba 2.1427564244929034+-0.15597858444551282\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b8d92a1035640618a91a35f3e2cbe89",
+       "model_id": "d0c1b6c94a464ccb94936565c9b809d5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -799,9 +791,7 @@
        "QgridWidget(grid_options={'fullWidthRows': True, 'syncColumnCellResize': True, 'forceFitColumns': True, 'defau…"
       ]
      },
-     "metadata": {
-      "tags": []
-     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -817,7 +807,7 @@
     "\n",
     "valoresH = np.array([0.1,0.9,1,2,3,5,10])\n",
     "for i in range(np.size(valoresH)):\n",
-    "    error, std = eexecutePARZEN_NW(valoresH[i])\n",
+    "    error, std = executePARZEN_NW(valoresH[i])\n",
     "    df_types2[\"Error_Prueba\"][i] = error\n",
     "    df_types2[\"Desviación estándar del error\"][i] = std\n",
     "\n",
@@ -838,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 53,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -878,39 +868,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0.1</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.381301</td>\n",
+       "      <td>0.0157311</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0.9</th>\n",
-       "      <td>0.3011</td>\n",
-       "      <td>0.0031</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.30111</td>\n",
+       "      <td>0.00313441</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.305223</td>\n",
+       "      <td>0.00315922</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.305481</td>\n",
+       "      <td>0.00394307</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.299317</td>\n",
+       "      <td>0.00424515</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.264437</td>\n",
+       "      <td>0.00338112</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>10</td>\n",
+       "      <td>2.14276</td>\n",
+       "      <td>0.155979</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -919,19 +909,17 @@
       "text/plain": [
        "                 Error_Prueba Desviación estándar del error\n",
        "Ancho del kernel                                           \n",
-       "0.1                                                        \n",
-       "0.9                    0.3011                        0.0031\n",
-       "1                                                          \n",
-       "2                                                          \n",
-       "3                                                          \n",
-       "5                                                          \n",
-       "10                                                         "
+       "0.1                  0.381301                     0.0157311\n",
+       "0.9                   0.30111                    0.00313441\n",
+       "1                    0.305223                    0.00315922\n",
+       "2                    0.305481                    0.00394307\n",
+       "3                    0.299317                    0.00424515\n",
+       "5                    0.264437                    0.00338112\n",
+       "10                    2.14276                      0.155979"
       ]
      },
-     "execution_count": 99,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 53,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
