--- a/Labs/Lab_3/Lab_3.1_K_means.ipynb
+++ b/Labs/Lab_3/Lab_3.1_K_means.ipynb
@@ -729,7 +729,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En este caso no se presentaron problemas de convergencia o colapso. No obstante, esto puede ocurrir si con alguna combinación se genera una matriz de covarianza nula, lo que implicaría que esta no fuese invertible y la función gaussiana de ese compente quedría indeterminada."
+    "En este caso no se presentaron problemas de convergencia o colapso. No obstante, esto puede ocurrir si con alguna combinación se genera una matriz de covarianza nula, lo que implicaría que esta no fuese invertible y la función gaussiana de ese componente quedría indeterminada."
    ]
   },
   {
@@ -756,6 +756,9 @@
    "outputs": [],
    "source": [
     "from sklearn.datasets import load_iris\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.mixture import GaussianMixture\n",
+    "\n",
     "data = load_iris()\n",
     "X=data.data\n",
     "Xclustering = X[:,1:3]\n",
