--- a/Labs/Lab_3/Lab_3.2_Arboles.ipynb
+++ b/Labs/Lab_3/Lab_3.2_Arboles.ipynb
@@ -31,26 +31,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Primer integrante:\n",
-    "#### Segundo integrante:"
+    "#### Primer integrante: Kevin Martínez Gallego\n",
+    "#### Segundo integrante: Andrés Mauricio Álvarez Ortiz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from __future__ import division\n",
+    "\n",
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import scipy as sc\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy.matlib as matlib\n",
     "from scipy import stats\n",
-    "from __future__ import division\n",
     "\n",
     "#Algunas advertencias que queremos evitar\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"always\")"
+    "warnings.filterwarnings(\"always\")\n"
    ]
   },
   {
@@ -59,12 +61,12 @@
    "source": [
     "## Ejercicio 1\n",
     "\n",
-    "A continuación se leen los datos de un problema de clasificación. El problema corresponde a la clasifiación de dígitos escritos a mano, el cual fue abordado en el laboratorio anterior. Usaremos únicamente 4 de las 10 clases disponibles. Los datos fueron preprocesados para reducir el número de características. La técnica usada será analizada más adelante en el curso."
+    "A continuación se leen los datos de un problema de clasificación. El problema corresponde a la clasificación de dígitos escritos a mano, el cual fue abordado en el laboratorio anterior. Usaremos únicamente 4 de las 10 clases disponibles. Los datos fueron preprocesados para reducir el número de características. La técnica usada será analizada más adelante en el curso."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,8 +80,28 @@
     "\n",
     "#---------- Datos a usar ----------------------\n",
     "X = data\n",
-    "Y = digits.target\n",
-    "    "
+    "Y = digits.target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(720, 39)\n",
+      "(720,)\n",
+      "(array([0, 1, 2, 3]), array([178, 182, 177, 183], dtype=int64))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X.shape)\n",
+    "print(Y.shape)\n",
+    "print(np.unique(Y, return_counts = True))"
    ]
   },
   {
@@ -94,15 +116,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
+      "Eficiencia durante la validación = 0.9013808190321215+-0.032391925101484476\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "import numpy as np\n",
     "from numpy import random\n",
     "from sklearn.model_selection import StratifiedKFold\n",
-    "\n",
+    "from sklearn import tree\n",
     "\n",
     "#Validamos el modelo\n",
     "Folds = 4\n",
@@ -124,13 +157,12 @@
     "    Xtest = (Xtest - np.matlib.repmat(media, Xtest.shape[0], 1))/np.matlib.repmat(desvia, Xtest.shape[0], 1)\n",
     "    \n",
     "    #Haga el llamado a la función para crear y entrenar el modelo usando los datos de entrenamiento\n",
-    "    model = ...\n",
-    "    \n",
-    "    \n",
+    "    model = tree.DecisionTreeClassifier()\n",
+    "    model = model.fit(Xtrain, Ytrain)\n",
     "    \n",
     "    #Validación\n",
-    "    Ytrain_pred = #Use el modelo previamente entrenado para hacer predicciones con las mismas muestras de entrenamiento\n",
-    "    Yest = #Use el modelo previamente entrenado para hacer predicciones con las muestras de test\n",
+    "    Ytrain_pred = model.predict(Xtrain) #Use el modelo previamente entrenado para hacer predicciones con las mismas muestras de entrenamiento\n",
+    "    Yest = model.predict(Xtest) #Use el modelo previamente entrenado para hacer predicciones con las muestras de test\n",
     "    \n",
     "    #Evaluamos las predicciones del modelo con los datos de test\n",
     "    EficienciaTrain[j] = np.mean(Ytrain_pred.ravel() == Ytrain.ravel())\n",
@@ -149,7 +181,12 @@
     "\n",
     "1.1 ¿Cuáles criterios para detener el crecimiento del árbol o de los nodos están disponibles en la librería?:\n",
     "\n",
-    "R/\n"
+    "R/\n",
+    "1. Profunidad máxima: De entrada limitamos la profunidad máxima que podrá alcanzar el árbol.\n",
+    "2. Número mínimo de muestras requeridas para dividir un nodo interno.\n",
+    "3. Número mínimo de muestras para estar en un nodo hoja: Un proceso de división en cualquier nivel del árbol solo se considerará si este deja al menos un número mínimo n de muestras en cada rama (izquierda y derecha).\n",
+    "4. Limitar el número de nodos hoja.\n",
+    "5. Particionar un nodo siempre y cuando la reducción en la impureza sea mayor o igual a un valor prestablecido.\n"
    ]
   },
   {
@@ -158,7 +195,12 @@
    "source": [
     "1.2. ¿Cuáles son los parámetros asociados con los criterios enumerados en el punto anterior?:\n",
     "\n",
-    "R/"
+    "R/\n",
+    "1. max_depth : int, default=None\n",
+    "2. min_samples_split : int or float, default=2\n",
+    "3. min_samples_leaf : int or float, default=1\n",
+    "4. max_leaf_nodes : int, default=None\n",
+    "5. min_impurity_decrease : float, default=0.0\n"
    ]
   },
   {
@@ -731,7 +773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5rc1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
