Lab_3.2 - DT + RF

--- a/Labs/Lab_3/Lab_3.2_Arboles.ipynb
+++ b/Labs/Lab_3/Lab_3.2_Arboles.ipynb
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -1046,28 +1046,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
-      "Eficiencia durante la validación = 0.9236973572788921+-0.03705444424572746\n"
+      "Eficiencia durante el entrenamiento = 0.9967592338387035+-0.0015334377385946292\n",
+      "Eficiencia durante la validación = 0.9138664168038948+-0.024561465718761794\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(0.9236973572788921, 0.03705444424572746)"
+       "(0.9138664168038948, 0.024561465718761794)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "RF(5, 39)"
+    "totalFeatures = 39\n",
+    "RF(5, totalFeatures)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1084,46 +1085,46 @@
        "(0.91953828115321, 0.02983613998326646)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "RF(10, 39)"
+    "RF(10, totalFeatures)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eficiencia durante el entrenamiento = 0.9995361781076066+-0.0008033630832879904\n",
-      "Eficiencia durante la validación = 0.9194454256031531+-0.018739409723163413\n"
+      "Eficiencia durante el entrenamiento = 0.9990740708987342+-0.0009259322766002021\n",
+      "Eficiencia durante la validación = 0.926451944739026+-0.029989748111451112\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(0.9194454256031531, 0.018739409723163413)"
+       "(0.926451944739026, 0.029989748111451112)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "RF(20, 39)"
+    "RF(20, totalFeatures)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1140,18 +1141,18 @@
        "(0.9208886286144272, 0.02888445276935772)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "RF(50, 39)"
+    "RF(50, totalFeatures)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1168,13 +1169,13 @@
        "(0.9236973572788921, 0.03705444424572746)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "RF(100, 39)"
+    "RF(100, totalFeatures)"
    ]
   },
   {
